avoid content shift with setting image size

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,6 +14,7 @@
   --bg-highlight: #007F8B;
 
   --shadow: black;
+// bg-col #33343b
 }
 
 // @media (prefers-color-scheme: light) {
@@ -38,10 +39,6 @@
 p {
   line-height: 1.3;
   color: var(--fg-alt);
-}
-
-img {
-  max-width: 100%;
 }
 
 body {
@@ -101,8 +98,15 @@ figure {
   }
 
   img {
-    max-width: 100%;
-    max-height: 100%;
+    // display: inline-block;
+    // background: red;
+    // object-fit: contain;
+    // max-width: 100%;
+    // max-height: 100%;
+    // background: red;
+    display: inline-block;
+    height: auto;
+    width: 100%;
   }
 }
 
@@ -216,8 +220,10 @@ nav {
       }
 
       img {
-        max-width: 100%;
-        max-height: 100%;
+        // background: var(--fg-muted);
+        display: inline-blojck;
+        height: auto;
+        width: 100%;
       }
 
       h3 {
